Initial commit. Copy files from original LD49 version.

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -42,7 +42,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=""
-export_path="dist/the_eye_of_mount_glower_on.exe"
+export_path="dist/the_eye_of_glower_on.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -84,7 +84,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=""
-export_path="dist/the_eye_of_mount_glower_on.apk"
+export_path="dist/the_eye_of_glower_on.apk"
 script_export_mode=1
 script_encryption_key=""
 
@@ -107,8 +107,8 @@ keystore/release_password=""
 one_click_deploy/clear_previous_install=false
 version/code=1
 version/name="1.0"
-package/unique_name="dev.levi.the_eye_of_mount_glower_on"
-package/name="The Eye of Mount Glower-On"
+package/unique_name="games.snoringcat.eye_of_glower_on"
+package/name="The Eye of Glower-On"
 package/signed=true
 package/classify_as_game=true
 package/retain_data_on_uninstall=false
